--- a/.github/workflows/website-upload.yaml
+++ b/.github/workflows/website-upload.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1   # change if your bucket is in another region
+          aws-region: us-east-1   
 
       - name: Upload index.html to S3
         run: aws s3 cp index.html s3://damiassignment-1/
